Game Layout rewrite: add Donation Bar component, make all fixed elems hide overflow

--- a/src/graphics/game-layout_new/common.css
+++ b/src/graphics/game-layout_new/common.css
@@ -41,6 +41,7 @@ body {
 .Fixed, .Capture {
   position: fixed;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .NoWrap {
